syntax = "proto3";
package cyber.resources.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "cyber/resources/v1beta1/types.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/cybercongress/go-cyber/x/resources/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cyber/resources/v1beta1/resources/params";
  }
  rpc Investmint(QueryInvestmintRequest) returns (QueryInvestmintResponse) {
    option (google.api.http).get =
        "/cyber/resources/v1beta1/resources/investmint";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryInvestmintRequest {
  cosmos.base.v1beta1.Coin amount = 1 [ (gogoproto.nullable) = false ];
  string resource = 2;
  uint64 length = 3;
}

message QueryInvestmintResponse {
  cosmos.base.v1beta1.Coin amount = 1 [ (gogoproto.nullable) = false ];
}